# PowerZooJax

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements_jax.txt  run_doc.bat  run_doc.sh
.github/workflows/: docs.yml
benchmarks/: .gitignore  HARDWARE.md  README.md  __init__.py  _paper_style.py
benchmarks/common/: __init__.py  analysis.py  artifacts.py  bounded_beta_policy.py  bounded_beta_sbx_policy.py  configs.py  eval_loop.py  experiment_ops.py  gpu_selector.py  io.py  powerzoo_bridge.py  powerzoo_repo.py  protocol.py  reporting.py  runtime.py  stats.py
benchmarks/dc_microgrid/: README.md  _reward_shaping.py  baselines.py  eval.py  plots.py  rejax_ckpt.py  run.py  run_all.py  summarize.py  train.py
benchmarks/ders/: README.md  baselines.py  eval.py  phase1_analysis.py  phase1_driver.py  plots.py  run_all.py  summarize.py  train.py
benchmarks/dso/: README.md  baselines.py  eval.py  phase2_analysis.py  plots.py  plots_episode_distributions.py  rejax_ckpt.py  run.py  run_all.py  summarize.py  train.py
benchmarks/gencos/: README.md  baselines.py  eval.py  phase1_analysis.py  phase2_analysis.py  phase2_validate.py  plots.py  run_all.py  summarize.py  train.py
benchmarks/tso/: README.md  baselines.py  budget_scan.py  checkpoints.py  config_runtime.py  current_safe_compare.py  eval.py  feasibility_milp.py  n256_epoch_sweep.py  n_env_safe_compare.py  phase1_analysis.py  plots.py  plots_episode_scatter.py  run.py  run_all.py  solver_sensitivity.py  summarize.py  train.py
docs/en/: getting-started.md  glossary.md  index.md
docs/javascripts/: mathjax.js  mermaid.js
docs/stylesheets/: extra.css
docs/zh/: getting-started.md  glossary.md  index.md
examples/: case_equivalence_test.py  dc_opf_congestion_compare.py  jax_00_verify_device.py  jax_01_create_case.py  jax_02_grid_env.py  jax_03_load_profiles.py  train_ippo_grid.py  train_ppo_battery.py  train_ppo_transgrid.py  train_rejax_battery.py  train_safe_ppo_transgrid.py
powerzoojax/: __init__.py  __main__.py
powerzoojax/case/: README.md  __init__.py  _registry.py  case_adapter.py  case_builder.py  case_data.py  case_info.py  case_matrices.py  case_plotter.py  dataframe.py
powerzoojax/data/: __init__.py  alignment.py  ausgrid_utils.py  data_loader.py  dc_microgrid_profiles.py  manifest.py  nonstationary.py  signals.py  splits.py
powerzoojax/envs/: __init__.py  base.py  (+1 more)
scripts/: convert_cases.py  generate_table_cases.py  generate_tso_comparison_golden.py
tests/: conftest.py  test_spaces.py
(+1807 files in other folders)
